- H3C driver correctly reads IPv6 addresses on interfaces
- SMS driver for Nexmo service
- SMS driver for SMSEagle gateway
- SMS driver for MyMobile service
- Fixed FDB handling on Cisco switches
- Added support for CHAP, MS-CHAPv1, and MS-CHAPv2 in RADIUS authentication
- MySQL monitoring subagent
- Fixed FreeBSD 11 compatibility issues
- Management console:
	- File manager improvements
- Fixed issues: #106, #130, #174, #185, #526, #569, #876, #953, #1031, #1043, #1069, #1090, #1097, #1156, #1192, #1201, #1205, #1206, #1233, #1258, #1285, #1292, #1300, #1312, #1314, #1318, #1320, #1323, #1326, #1329, #1332, #1338, #1348, #1349, #1360, #1361, #1362


*
* 2.1-M1
*
- New policy type: Log Parser
- New server configuration parameter "JobRetryCount"
- Chassis objects
- Hypervisor monitoring subagent
- In case of Policy deploy, Policy uninstall or File upload jobs fail they are scheduled for reinstallation(scheduled tasks)  "JobRetryCount" times. First time job is rescheduled in 10 minutes. Each next wait time is twice more than the previous time. 
- If policy is known as installed on the node by the server and agent reposts that it is not installed it is being reinstalled.
- Added configuration option to log parser to generate event only if regular expression have been matched exact count of the times in a predefined time period
- New internal parameters: Server.ReceivedSNMPTraps, Server.ReceivedSyslogMessages, ReceivedSNMPTraps, ReceivedSyslogMessages
- Max size of agent data collectiors pool can be configured
- Agent data reconciliation block size and timeout can be configured
- New agent parameters System.CPU.CurrentUsage and System.CPU.CurrentUsage(*)
- SSH subagent (for collecting data and executing actions via SSH)
- Zone ID can be set for agent in SNMP proxy mode
- Zones has common default proxy node for all protocols
- Zone's proxy node can be placed inside that zone
- Syslog proxy in agent
- Built-in superuser account renamed to "system"