@@ -20,6 +20,8 @@
 - Added support for CHAP, MS-CHAPv1, and MS-CHAPv2 in RADIUS authentication
 - MySQL monitoring subagent
 - Fixed FreeBSD 11 compatibility issues
+- Implemented interrupt and context switch counters in platform subagents
+- Implemented CPU interrupt time parameters on Windows
 - Management console:
 	- File manager improvements
 - Fixed issues: #106, #130, #174, #185, #526, #569, #876, #953, #1031, #1043, #1069, #1090, #1097, #1156, #1192, #1201, #1205, #1206, #1233, #1258, #1285, #1292, #1300, #1312, #1314, #1318, #1320, #1323, #1326, #1329, #1332, #1338, #1348, #1349, #1360, #1361, #1362
